--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.dotnet.smugglercamp.MainActivity">
+    android:padding="@dimen/activity_horizontal_margin"
+    tools:context="pl.oldzi.smugglercamp.MainActivity"
+    android:background="@color/colorBackground"
+    android:orientation="vertical"
+    android:gravity="center">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+        android:text="Smuggler"
+        android:textSize="40sp"
+        android:textColor="@color/colorAccent"
+        android:gravity="center"
+        android:layout_marginBottom="20dp"/>
+    <Button
+        android:id="@+id/addButton"
+        android:onClick="add"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="Add"
+        android:textSize="24sp"
+        android:textColor="@color/colorAccent"
+        android:background="@color/colorPurple"
+        android:gravity="center"
+        android:layout_marginBottom="10dp"/>
+    <Button
+        android:id="@+id/sellButton"
+        android:onClick="sell"
+        android:layout_height="40dp"
+        android:layout_width="match_parent"
+        android:text="Sell"
+        android:textSize="24sp"
+        android:textColor="@color/colorAccent"
+        android:background="@color/colorPurple"
+        android:gravity="center"
+        android:layout_marginBottom="10dp"/>
+    <Button
+        android:id="@+id/productsButton"
+        android:onClick="products"
+        android:layout_height="40dp"
+        android:layout_width="match_parent"
+        android:text="Products"
+        android:textSize="24sp"
+        android:textColor="@color/colorAccent"
+        android:background="@color/colorPurple"
+        android:gravity="center"
+        android:layout_marginBottom="10dp"/>
+    <Button
+        android:id="@+id/bossModeButton"
+        android:onClick="bossMode"
+        android:layout_height="40dp"
+        android:layout_width="match_parent"
+        android:text="Boss mode"
+        android:textSize="24sp"
+        android:textColor="@color/colorAccent"
+        android:background="@color/colorPurple"
+        android:gravity="center"
+        android:layout_marginBottom="10dp"/>
+
+
+
+</LinearLayout>
