* Added AddActivity * Added layout for MainActivity * Added methods for handling button clicks * Created an Intent for starting AddActivity * Declared AddActivity in AndroidManifest.xml * Added style for InputTextLayout components * Defined dimensions in dimens.xml * Compiled library ’com.android.support:design:23.2.0'

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorAccent">#f4f4f4</color>
     <color name="colorBackground">#4A148C</color>
     <color name="colorPurple">#6C30B6</color>
+    <color name="colorPurpleLight">#8757c2</color>
 </resources>
