--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,16 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColorPrimary">#fff</item>
+    </style>
+
+    <style name="EditTextStyle" parent="TextAppearance.AppCompat">
+
+        <item name="android:textColorHint">@color/colorPurpleLight</item>
+        <item name="android:textSize">18sp</item>
+        <item name="colorAccent">@color/colorPurpleLight</item>
+        <item name="colorControlNormal">@color/colorPurpleLight</item>
+        <item name="colorControlActivated">@color/colorAccent</item>
     </style>
 
 </resources>
