--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,8 +9,8 @@
         <item name="android:textColorPrimary">#fff</item>
     </style>
 
+    <!-- Styl dla elementów EditText -->
     <style name="EditTextStyle" parent="TextAppearance.AppCompat">
-
         <item name="android:textColorHint">@color/colorPurpleLight</item>
         <item name="android:textSize">18sp</item>
         <item name="colorAccent">@color/colorPurpleLight</item>
