PART-08-BossModeActivity *Added BossMode *Used SharedPreferences

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorBackground">#4A148C</color>
     <color name="colorPurple">#6C30B6</color>
     <color name="colorPurpleLight">#8757c2</color>
+    <color name="colorDisabled">#40107b</color>
 </resources>
